--- a/src/sass/blocks/_filter.scss
+++ b/src/sass/blocks/_filter.scss
@@ -8,6 +8,8 @@
         margin-bottom: 30px;
     }
     &__btn {
+        display: flex;
+        justify-content: center;
         margin-bottom: 1.125rem;
     }
     &__reset {
