--- a/src/sass/blocks/header/_mobile-navigation.scss
+++ b/src/sass/blocks/header/_mobile-navigation.scss
@@ -10,6 +10,8 @@
     height: 100%;
     background-color: $grey-bg;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     padding: 3.75rem 1.875rem;
     text-align: center;
     font-size: 1.125rem;
@@ -24,14 +26,12 @@
         margin-top: 0.3125rem;
     }
     &__link {
-        padding: 0.3125rem 1.5625rem 0.3125rem 0.3125rem;
+        width: 100%;
+        padding: 0.625rem 1.5625rem;
     }
     &__link-icon {
         top: 0.625rem;
     } 
-    &__logo {
-        margin-bottom: 1.875rem;
-    }
 }
 
 
