--- a/src/sass/blocks/_label-block.scss
+++ b/src/sass/blocks/_label-block.scss
@@ -8,7 +8,7 @@
         text-align: left;
         &::after {
             content: '*';
-            position: absolute;
+            position: relative;
             color: $red;
             top: -0.3125rem;
         }
