--- a/src/sass/blocks/_restore-password.scss
+++ b/src/sass/blocks/_restore-password.scss
@@ -1,5 +1,6 @@
 .restore-password {
     font-family: 'Scada', sans-serif;
+    line-height: 1.5;
     background-color: $grey-bg;
     padding: 1.875rem 0;
     text-align: center;
