--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,3 +10,7 @@ block content
         main.main
             include ./chunk/motomir.pug
             include ./chunk/partners.pug
+            include ./chunk/popular-products.pug
+
+
+            
