--- a/src/pug/layout/app.pug
+++ b/src/pug/layout/app.pug
@@ -15,4 +15,5 @@ html(lang="ru")
         title #{title}
     body
         block content
+        script(src="plagins/swiper.min.js")
         script(src="js/main.js")
