--- a/src/pug/layout/mixins.pug
+++ b/src/pug/layout/mixins.pug
@@ -3,3 +3,5 @@ include ./../mixins/dropdown.pug
 include ./../mixins/navlink.pug
 include ./../mixins/paragraph.pug
 include ./../mixins/partners.pug
+include ./../mixins/product-card.pug
+include ./../mixins/arrow-btn.pug
