--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,6 +11,7 @@ block content
             include ./chunk/motomir.pug
             include ./chunk/partners.pug
             include ./chunk/popular-products.pug
+            include ./chunk/moto-news.pug
 
 
             
