--- a/src/pug/layout/mixins.pug
+++ b/src/pug/layout/mixins.pug
@@ -5,3 +5,4 @@ include ./../mixins/paragraph.pug
 include ./../mixins/partners.pug
 include ./../mixins/product-card.pug
 include ./../mixins/arrow-btn.pug
+include ./../mixins/news-card.pug
